--- a/notebook/2d_box_seg.ipynb
+++ b/notebook/2d_box_seg.ipynb
@@ -14,16 +14,7 @@
    "cell_type": "code",
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2"
-   ],
-   "id": "6c8827d5c971ef1f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
+    "%autoreload 2\n",
     "from collections import Counter\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -35,16 +26,8 @@
     "\n",
     "import nrrd\n",
     "import SimpleITK as sitk\n",
-    "from utils.plot import transparent_cmap"
-   ],
-   "id": "7b960d3bfd8b1693",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
+    "from utils.plot import transparent_cmap\n",
+    "\n",
     "# Dataset\n",
     "data_folder = Path(\"/media/liushifeng/KINGSTON/ULS Jan 2025/ULS23/novel_data/ULS23_DeepLesion3D\")\n",
     "seg_folder = data_folder / \"labels\"\n",
@@ -59,7 +42,7 @@
     "seg_paths = {x: seg_folder / x for x in filenames}\n",
     "ct_paths = {x: ct_folder / x for x in filenames}"
    ],
-   "id": "c30e0214b5bbe9f3",
+   "id": "6c8827d5c971ef1f",
    "outputs": [],
    "execution_count": null
   },
@@ -181,71 +164,13 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# if save:\n",
-    "#     # save training data set\n",
-    "#     train_or_val = \"train\" if lesion_name in train_names else \"val\"\n",
-    "#     save_folder = output_folder / train_or_val\n",
-    "#     save_folder.mkdir(parents=True, exist_ok=True)\n",
+    "# plt.figure(figsize=(6,2.5));\n",
+    "# plt.bar([bins[int(x)] for x in hu_counter.keys()], hu_counter.values(), width=50);\n",
     "#\n",
-    "#     np.save(save_folder / f\"{lesion_name}_slice{i}_crop\", np.array(ct_crop, dtype=np.int16))\n",
-    "#     np.save(save_folder / f\"{lesion_name}_slice{i}_cropseg\", np.array(seg_crop, dtype=np.uint8))\n",
-    "#     np.save(save_folder / f\"{lesion_name}_slice{i}_slice\", np.array(ct_slice, dtype=np.int16))\n",
-    "#\n",
-    "# if plot:\n",
-    "#     _, axes = plt.subplots(1, 2, figsize=(4, 2))\n",
-    "#\n",
-    "#     # plot the crop and segment\n",
-    "#     vmin, vmax = -200, 200\n",
-    "#     axes[0].imshow(ct_crop, vmin=vmin, vmax=vmax, cmap='gray')\n",
-    "#     axes[1].imshow(ct_crop, vmin=vmin, vmax=vmax, cmap='gray')\n",
-    "#     axes[1].imshow(seg_crop, cmap=transparent_cmap(\"blue\"), alpha=0.4)\n",
-    "#     for ax in axes:\n",
-    "#         ax.axis(\"off\")\n",
-    "#     plt.show()\n",
-    "#\n",
-    "#     # plot the entire slice\n",
-    "#     _, axes = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "#     axes[0].imshow(ct_slice, cmap='gray')\n",
-    "#     axes[1].imshow(ct_slice, cmap='gray')\n",
-    "#     axes[1].imshow(seg_slice, cmap=transparent_cmap(\"blue\"), alpha=0.4)\n",
-    "#     for ax in axes:\n",
-    "#         ax.axis(\"off\")\n",
-    "#     plt.show()"
-   ],
-   "id": "bea30ff75a18099a",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.figure(figsize=(6,2.5));\n",
-    "plt.bar([bins[int(x)] for x in hu_counter.keys()], hu_counter.values(), width=50);"
+    "# plt.imshow(ct_slice, cmap='gray'); plt.axis(\"off\")\n",
+    "# plt.imshow(seg_slice, cmap='jet', alpha=0.5); plt.axis(\"off\");"
    ],
    "id": "abe8c51a273ef04",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.figure(figsize=(6,2.5));\n",
-    "plt.bar([bins[int(x)] for x in hu_counter.keys()], hu_counter.values(), width=50);"
-   ],
-   "id": "c40d9fd6524f4c7a",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "plt.imshow(ct_slice, cmap='gray'); plt.axis(\"off\");\n",
-    "plt.imshow(seg_slice, cmap='jet', alpha=0.5); plt.axis(\"off\");"
-   ],
-   "id": "ec58bff2499ee0bb",
    "outputs": [],
    "execution_count": null
   },
@@ -258,31 +183,31 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "data_dir = Path(\"/media/liushifeng/KINGSTON/ULS DL3D 2D dataset\")",
-   "id": "fb4fa43161882564",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "import os\n",
-    "import numpy as np\n",
     "from torch.utils.data import DataLoader\n",
     "from dataset import SegmentationDataset\n",
+    "from transforms import train_transform, val_transform, context_transform\n",
     "\n",
+    "# data\n",
+    "data_dir = Path(\"/media/liushifeng/KINGSTON/ULS DL3D 2D dataset\")\n",
     "image_dir = data_dir / \"images\"\n",
     "label_dir = data_dir / \"masks\"\n",
     "all_images = sorted(os.listdir(image_dir))\n",
     "\n",
-    "# random.shuffle(all_images)  # Shuffle before splitting\n",
-    "# val_size = int(0.25 * len(all_images))\n",
-    "# val_images = all_images[:val_size]\n",
-    "# train_images = all_images[val_size:]\n",
-    "\n",
     "val_images = [x for x in all_images if x.split(\"_slice\")[0] in val_names]\n",
-    "train_images = [x for x in all_images if x.split(\"_slice\")[0] in train_names]"
+    "train_images = [x for x in all_images if x.split(\"_slice\")[0] in train_names]\n",
+    "\n",
+    "# dataloaders\n",
+    "image_names = None\n",
+    "batch_size = 32\n",
+    "workers = 24\n",
+    "train_dataset = SegmentationDataset(\n",
+    "    image_dir, label_dir, train_images, train_transform, context_transform)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)\n",
+    "\n",
+    "val_dataset = SegmentationDataset(image_dir, label_dir, val_images, val_transform, context_transform)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)"
    ],
    "id": "37f02184712b935d",
    "outputs": [],
@@ -292,24 +217,14 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from transforms import train_transform, val_transform\n",
-    "\n",
-    "image_names = None\n",
-    "batch_size = 1\n",
-    "workers = 20\n",
-    "train_dataset = SegmentationDataset(image_dir, label_dir, train_images, train_transform)\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)\n",
-    "\n",
-    "val_dataset = SegmentationDataset(image_dir, label_dir, val_images, val_transform)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=workers)\n",
-    "\n",
     "# Visualizing data loader\n",
     "data = next(iter(val_loader))\n",
-    "plt.figure(figsize=(3,3))\n",
-    "plt.imshow(data['image'].squeeze(), cmap='gray')\n",
-    "plt.imshow(data['mask'].squeeze(), cmap=transparent_cmap(\"blue\"), alpha=0.5)\n",
-    "plt.imshow(data['box_mask'].squeeze(), cmap='Greens', alpha=0.3)\n",
+    "plt.figure(figsize=(1.5,1.5))\n",
+    "plt.imshow(data['image'][0].squeeze(), cmap='gray')\n",
+    "plt.imshow(data['mask'][0].squeeze(), cmap=transparent_cmap(\"b\"), alpha=0.5)\n",
+    "plt.imshow(data['box_mask'][0].squeeze(), vmin=0, vmax=1, cmap=transparent_cmap(\"g\"), alpha=0.3)\n",
     "# plt.axis('off');\n",
+    "print(data['image'][0].shape)\n",
     "plt.show()"
    ],
    "id": "f005c29dd4e4cdf7",
@@ -326,13 +241,15 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "from glob import glob\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=SyntaxWarning)\n",
     "import torch\n",
     "import lightning as L\n",
     "from lightning.pytorch.callbacks import EarlyStopping\n",
+    "from pytorch_lightning.loggers import TensorBoardLogger\n",
     "\n",
-    "torch.set_float32_matmul_precision('medium')\n",
+    "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "device"
    ],
@@ -346,12 +263,17 @@
    "source": [
     "from model import UNet\n",
     "\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=workers)\n",
+    "\n",
+    "# torch.set_float32_matmul_precision('medium')\n",
     "unet = UNet()\n",
-    "early_stopping = EarlyStopping('val_loss', verbose=True)\n",
+    "unet = torch.compile(unet)\n",
+    "early_stopping = EarlyStopping('val_loss', patience=5, verbose=True)\n",
+    "logger = TensorBoardLogger(\"lightning_logs\", name=\"dl1\")  # name=\"my_model\", version=\"GAT\"\n",
     "trainer = L.Trainer(\n",
-    "    accumulate_grad_batches=32,\n",
-    "    max_epochs=20,\n",
-    "    callbacks=[early_stopping]\n",
+    "    max_epochs=70,\n",
+    "    callbacks=[early_stopping],\n",
+    "    logger=logger,\n",
     ")\n",
     "trainer.fit(unet, train_loader, val_loader)"
    ],
@@ -362,8 +284,63 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "trainer.early_stopping_callback.stopped_epoch",
-   "id": "d0706e994bb4f694",
+   "source": [
+    "ckpt_path = glob(\"lightning_logs/dl3/version_1/*/*.ckpt\")[0]; print(ckpt_path)\n",
+    "unet = UNet.load_from_checkpoint(ckpt_path)"
+   ],
+   "id": "7b0c84015386888",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "large_lesion_names = ['000083_07_01_114_lesion_01_slice56.npy',\n",
+    " '000083_07_01_114_lesion_01_slice57.npy',\n",
+    " '000083_07_01_114_lesion_01_slice58.npy',\n",
+    " '000083_07_01_114_lesion_01_slice59.npy',\n",
+    " '000083_07_01_114_lesion_01_slice60.npy',\n",
+    " '000083_07_01_114_lesion_01_slice61.npy',\n",
+    " '000083_07_01_114_lesion_01_slice62.npy',\n",
+    " '000083_07_01_114_lesion_01_slice63.npy',\n",
+    " '000083_07_01_114_lesion_01_slice64.npy',\n",
+    " '000083_07_01_114_lesion_01_slice65.npy',\n",
+    " '000083_07_01_114_lesion_01_slice66.npy',\n",
+    " '000083_07_01_114_lesion_01_slice67.npy',\n",
+    " '000083_07_01_114_lesion_01_slice68.npy',\n",
+    " '000425_01_01_058_lesion_01_slice61.npy',\n",
+    " '000425_01_01_058_lesion_01_slice62.npy',\n",
+    " '000425_01_01_058_lesion_01_slice63.npy',\n",
+    " '000425_01_01_058_lesion_01_slice64.npy',\n",
+    " '000425_01_01_058_lesion_01_slice65.npy',\n",
+    " '000425_01_01_058_lesion_01_slice66.npy',\n",
+    " '000425_01_01_058_lesion_01_slice67.npy',\n",
+    " '000482_02_01_099_lesion_01_slice62.npy',\n",
+    " '000482_02_01_099_lesion_01_slice63.npy',\n",
+    " '000482_02_01_099_lesion_01_slice64.npy',\n",
+    " '000482_02_01_099_lesion_01_slice65.npy',\n",
+    " '000482_02_01_099_lesion_01_slice66.npy',\n",
+    " '000482_02_01_099_lesion_01_slice67.npy',\n",
+    " '000482_02_01_099_lesion_01_slice68.npy',\n",
+    " '000482_02_01_099_lesion_01_slice69.npy',\n",
+    " '000482_02_01_099_lesion_01_slice70.npy',\n",
+    " '000482_02_01_099_lesion_01_slice71.npy',\n",
+    " '000482_02_01_099_lesion_01_slice72.npy',\n",
+    " '000482_02_01_099_lesion_01_slice73.npy',\n",
+    " '000482_02_01_099_lesion_01_slice74.npy',\n",
+    " '000879_03_01_054_lesion_01_slice63.npy',\n",
+    " '000879_03_01_054_lesion_01_slice64.npy',\n",
+    " '000879_03_01_054_lesion_01_slice65.npy',\n",
+    " '000879_03_01_054_lesion_01_slice66.npy',\n",
+    " '000879_03_01_054_lesion_01_slice67.npy',\n",
+    " '000879_03_01_054_lesion_01_slice68.npy',\n",
+    " '000879_03_01_054_lesion_01_slice69.npy',\n",
+    " '000879_03_01_054_lesion_01_slice70.npy',\n",
+    " '000879_03_01_054_lesion_01_slice71.npy',\n",
+    " '000879_03_01_054_lesion_01_slice72.npy']"
+   ],
+   "id": "4b1673ee8abd9f0f",
    "outputs": [],
    "execution_count": null
   },
@@ -375,50 +352,55 @@
     "from torchmetrics.segmentation import DiceScore\n",
     "\n",
     "dice = DiceScore(1)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=True, num_workers=workers)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=workers)\n",
     "\n",
     "res = []\n",
     "n = 0\n",
-    "for i, data in tqdm(enumerate(val_loader)):\n",
-    "# data = next(iter(val_loader))\n",
+    "for i, data in enumerate(val_loader):\n",
+    "    # if data['name'][0] != \"000738_01_01_075_lesion_01_slice62.npy\": #not in large_lesion_names:\n",
+    "    #     continue\n",
+    "\n",
+    "    box_area_ratio = data['box_mask'].mean().item()\n",
+    "\n",
     "    img = data['input'].squeeze()[0]\n",
+    "    box_mask = data['input'].squeeze()[1]\n",
     "    out_raw = unet.model.to(device)(data['input'].to(device)).detach().cpu().squeeze()\n",
-    "    out = out_raw.clone()\n",
-    "    out[out < 0.5] = 0\n",
+    "    out = out_raw.clone() > 0.5\n",
     "\n",
     "    gt = data['mask'].bool().squeeze()\n",
     "    pred = out.bool().squeeze()\n",
     "\n",
+    "    # get metrics\n",
     "    tp = gt & pred\n",
     "    fp = ~gt & pred\n",
     "    fn = gt & ~pred\n",
     "\n",
     "    dice_score = dice(pred.unsqueeze(0), gt.unsqueeze(0))\n",
-    "    dice_scores.append(dice_score.item())\n",
-    "\n",
     "    vol_sim = 1 - abs(pred.sum() - gt.sum()) / gt.sum()\n",
-    "    vol_scores.append(vol_sim.item())\n",
     "\n",
-    "    res.append({\"dice\": dice_score.item(), \"vs\": vol_sim.item()})\n",
-    "    # if fp.sum() + fn.sum() > max(70, (0.6 * tp.sum())):\n",
-    "    if False:\n",
-    "        print(dice_score)\n",
+    "    res.append({\"dice\": dice_score.item(), \"vs\": vol_sim.item(), \"area_ratio\": box_area_ratio})\n",
+    "    if fp.sum() + fn.sum() > max(30, (0.3 * gt.sum())):\n",
+    "    # if True:\n",
+    "        # continue\n",
+    "        print(f\"dice: {dice_score:.3f}, volume similarity: {vol_sim:.3f}\")\n",
+    "        print(data['name'])\n",
     "        fig, ax = plt.subplots(1, 3, figsize=(6,2))\n",
-    "        ax[0].imshow(img, cmap='gray')\n",
+    "        ax[0].imshow(img, vmin=0, vmax=1, cmap='gray')\n",
     "\n",
-    "        ax[1].imshow(img, cmap='gray')\n",
-    "        ax[1].imshow(out * tp, cmap=transparent_cmap(\"green\"), alpha=0.4)\n",
-    "        ax[1].imshow(out * fp, cmap=transparent_cmap(\"red\"), alpha=0.4)\n",
-    "        ax[1].imshow(fn, cmap=transparent_cmap(\"blueviolet\"), alpha=0.4)\n",
+    "        ax[1].imshow(img, vmin=0, vmax=1, cmap='gray')\n",
+    "        ax[1].imshow(out * tp, cmap=transparent_cmap(\"green\"), alpha=0.6)\n",
+    "        ax[1].imshow(out * fp, cmap=transparent_cmap(\"red\"), alpha=0.6)\n",
+    "        ax[1].imshow(fn, cmap=transparent_cmap(\"blueviolet\"), alpha=0.6)\n",
     "\n",
-    "        ax[2].imshow(out, vmin=0, vmax=1, cmap=\"summer_r\", alpha=1)\n",
+    "        ax[2].imshow(out_raw, vmin=0, vmax=1, cmap=\"summer_r\", alpha=1)\n",
+    "        ax[2].imshow(box_mask, cmap=transparent_cmap(\"cyan\"), alpha=0.2)\n",
     "\n",
     "        [a.axis('off') for a in ax]\n",
     "        plt.show()\n",
     "        n += 1\n",
-    "\n",
-    "    if n > 1e10:\n",
-    "        break\n"
+    "    #\n",
+    "    # if n > 10:\n",
+    "    #     break"
    ],
    "id": "534ad06ac9cabe1c",
    "outputs": [],
@@ -430,9 +412,119 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "pd.DataFrame(res).describe()"
+    "df = pd.DataFrame(res)\n",
+    "df.describe().round(3).loc[['50%', 'mean']]"
    ],
-   "id": "730fddcb6c658b85",
+   "id": "4e1ac6e7ce25c7dd",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns"
+   ],
+   "id": "b3545675da6cc2e4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# get lesion stats\n",
+    "val_loader = DataLoader(val_dataset, batch_size=1, shuffle=True, num_workers=workers)\n",
+    "\n",
+    "sizes = []\n",
+    "boxes = []\n",
+    "h_ratios = []\n",
+    "w_ratios = []\n",
+    "area_ratios = []\n",
+    "for i, data in enumerate(val_loader):\n",
+    "    size = data['original_size']\n",
+    "    box = [x.item() for x in data['original_bbox']]\n",
+    "\n",
+    "    area_ratios.append(data['mask'][0].mean().item())\n",
+    "    x0, y0, x1, y1 = get_seg_bbox(data['box_mask'][0])\n",
+    "    w_ratios.append((x1 - x0) / 128)\n",
+    "    h_ratios.append((y1 - y0) / 128)\n",
+    "\n",
+    "    sizes.append(size[0].item())\n",
+    "    boxes.append(box)\n",
+    "    # print(box)\n",
+    "    # break\n",
+    "\n",
+    "df = pd.DataFrame(boxes, columns=[\"xmin\", \"ymin\", \"xmax\", \"ymax\"])\n",
+    "\n",
+    "df['width'] = df['xmax'] - df['xmin']\n",
+    "df['height'] = df['ymax'] - df['ymin']\n",
+    "\n",
+    "df['width_ratio'] = w_ratios\n",
+    "df['height_ratio'] = h_ratios\n",
+    "df['box_area_ratio'] = df['width_ratio'] * df['height_ratio']\n",
+    "df['area_ratio'] = area_ratios"
+   ],
+   "id": "193abc0141f74f99",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.jointplot(\n",
+    "    data=df, x=\"width_ratio\", y=\"height_ratio\", height=5,\n",
+    "    size=df['box_area_ratio'].tolist(),\n",
+    "    hue='box_area_ratio',\n",
+    "    legend=None,\n",
+    ");"
+   ],
+   "id": "63e88c1f81cbd91e",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.jointplot(\n",
+    "    data=df, x=\"width_ratio\", y=\"height_ratio\", height=5,\n",
+    "    size=df['box_area_ratio'].tolist(),\n",
+    "    hue='box_area_ratio',\n",
+    "    legend=None,\n",
+    ");"
+   ],
+   "id": "2e29a5602d2ac888",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.jointplot(\n",
+    "    data=df, x=\"width_ratio\", y=\"height_ratio\", height=5,\n",
+    "    size=df['box_area_ratio'].tolist(),\n",
+    "    hue='box_area_ratio',\n",
+    "    legend=None,\n",
+    ");"
+   ],
+   "id": "5611d9273670c662",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sns.jointplot(data=df, x=\"width\", y=\"height\", height=5,\n",
+    "              size=df['area_ratio'].tolist(),\n",
+    "              # hue='box_area_ratio'\n",
+    "              );"
+   ],
+   "id": "850b812e577dc604",
    "outputs": [],
    "execution_count": null
   }
