--- a/3d/nnunet_data_proc.ipynb
+++ b/3d/nnunet_data_proc.ipynb
@@ -24,6 +24,7 @@
     "from tqdm import tqdm\n",
     "import SimpleITK as sitk\n",
     "\n",
+    "from utils.plot import transparent_cmap\n",
     "\n",
     "data_folder = Path(\"/media/liushifeng/KINGSTON/nnUNet_raw/Dataset001_3dlesion\")\n",
     "train_images = data_folder / \"imagesTr\"\n",
@@ -163,15 +164,24 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "for f in tqdm(os.listdir(train_labels)):\n",
+    "for f in tqdm(sorted(os.listdir(train_labels))):\n",
     "    img_path = train_images / f.replace('.nii.gz', '_0000.nii.gz')\n",
     "    label_path = train_labels / f\n",
     "    img = sitk.ReadImage(img_path)\n",
     "    seg = sitk.ReadImage(label_path)\n",
-    "    seg_img = sitk.Resample(seg, img, sitk.Transform(), sitk.sitkNearestNeighbor, 0.0, img.GetPixelID())\n",
+    "    # seg_img = sitk.Resample(seg, img, sitk.Transform(), sitk.sitkNearestNeighbor, 0.0, img.GetPixelID())\n",
     "\n",
-    "    print(f\"resampled {f}\")\n",
-    "    sitk.WriteImage(seg_img, label_path)"
+    "    # ct_data = sitk.GetArrayFromImage(img)\n",
+    "    # seg_data = sitk.GetArrayFromImage(seg)\n",
+    "    # resampled = sitk.GetArrayFromImage(seg_img)\n",
+    "    i = img.GetSize()\n",
+    "    s = seg.GetSize()\n",
+    "    if i != s:\n",
+    "        print(f\"resampled {f}\")\n",
+    "        print(i, s)\n",
+    "\n",
+    "            # break\n",
+    "    # sitk.WriteImage(seg_img, label_path)"
    ],
    "id": "32547ebcc3dedbe6",
    "outputs": [],
@@ -180,16 +190,104 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Visualize data",
+   "source": [
+    "## Visualize data\n",
+    "Verify images and segmentations match"
+   ],
    "id": "4342c5df98205ea1"
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "import random\n",
+    "\n",
+    "data_folder = Path(\"/media/liushifeng/KINGSTON/nnUNet_raw/Dataset001_3dlesion\")\n",
+    "train_images = data_folder / \"imagesTr\"\n",
+    "train_labels = data_folder / \"labelsTr\""
+   ],
+   "id": "3c9cb5ca536607aa",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "3c9cb5ca536607aa"
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot(f, ct_data, seg_data):\n",
+    "\n",
+    "    slice_index = seg_data.sum(axis=(1,2)).argmax()\n",
+    "    ct_slice = ct_data[slice_index, :, :, ]\n",
+    "    seg_slice = seg_data[slice_index, :, :]\n",
+    "\n",
+    "    print(f)\n",
+    "    fig, ax = plt.subplots(1,2, figsize=(8,4))\n",
+    "    ax[0].imshow(ct_slice, cmap='gray')\n",
+    "    ax[1].imshow(ct_slice, cmap='gray')\n",
+    "    ax[1].imshow(seg_slice, cmap=transparent_cmap('r'), alpha=0.3)\n",
+    "\n",
+    "    for a in ax:\n",
+    "        a.axis('off')\n",
+    "    plt.show()"
+   ],
+   "id": "44827cdf97589ba5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-07T09:08:01.427492Z",
+     "start_time": "2025-04-07T09:07:27.600722Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "uls_img = [x for x in os.listdir(train_images) if x.startswith(\"ULS\")]\n",
+    "ap_img = [x for x in os.listdir(train_images) if x.startswith(\"AutoPET\")]\n",
+    "\n",
+    "# filenames = random.sample(ap_img, 5) + random.sample(uls_img, 5)\n",
+    "filenames = uls_img + ap_img\n",
+    "n = 0\n",
+    "\n",
+    "volumes = []\n",
+    "\n",
+    "for i, f in enumerate(filenames):\n",
+    "    ct_path = train_images / f\n",
+    "    seg_path = train_labels / f.replace(\"_0000.nii.gz\", \".nii.gz\")\n",
+    "\n",
+    "    seg_img = sitk.ReadImage(seg_path)\n",
+    "    seg_data = sitk.GetArrayFromImage(seg_img)\n",
+    "\n",
+    "    volumes.append(seg_data.mean())\n",
+    "    # if seg_data.mean() > 5e-4:\n",
+    "    #     print(seg_data.mean())\n",
+    "    #     ct_img = sitk.ReadImage(ct_path)\n",
+    "    #     ct_data = sitk.GetArrayFromImage(ct_img)\n",
+    "    #     plot(f, ct_data, seg_data)\n",
+    "    #     n += 1\n",
+    "\n",
+    "    # if n > 10:\n",
+    "    #     break\n"
+   ],
+   "id": "72550c52cb699d85",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.Series(volumes).clip(0,0.001).hist(bins=100, figsize=(4,2));\n",
+    "plt.title(\"Volume of lesion / scan\")"
+   ],
+   "id": "e506f2715b984b15",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
