--- a/2d_seg_and_video/ct_video.ipynb
+++ b/2d_seg_and_video/ct_video.ipynb
@@ -21,19 +21,6 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-01-24T10:03:46.549386Z",
-     "start_time": "2025-01-24T10:03:46.131437Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "16fda53a79ed94f1",
-   "outputs": [],
-   "execution_count": 1
-  },
-  {
    "metadata": {},
    "cell_type": "code",
    "source": [
@@ -50,9 +37,9 @@
     "import SimpleITK as sitk\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from utils import check_multiple_cts\n",
+    "from utils.data import check_multiple_cts\n",
     "from utils.video import create_mp4\n",
-    "from plot_utils import (\n",
+    "from utils.plot import (\n",
     "    plot_slice_full,\n",
     "    plot_and_save,\n",
     "    get_slice_range,\n",
