--- a/3d_seg/ct-fm.ipynb
+++ b/3d_seg/ct-fm.ipynb
@@ -192,76 +192,12 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "import random",
-   "id": "34cc7a29cf404dc9",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
     "ct_path = train_images / random.sample(ap_img, 1)[0]\n",
     "ct_img = sitk.ReadImage(ct_path)\n",
     "ct_data = sitk.GetArrayFromImage(ct_img)"
    ],
    "id": "219598b5149726a4",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "ct_data.shape",
-   "id": "9763ca1d4522b6af",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "import joblib\n",
-   "id": "bb7551633901700b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "joblib.load(r\"/media/liushifeng/KINGSTON/nnUNet_preprocessed/Dataset001_3dlesion/nnUNetPlans_3d_fullres/AutoPET-Lymphoma-B_PETCT_0f4ee9e078_CT.pkl\")",
-   "id": "a930602cbb3bb0dc",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "plt.imshow(ct_data.mean(axis=1))",
-   "id": "d749b01eb81f1372",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "676 * 2.5",
-   "id": "91105ba794b1def2",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "54c6526b0b393c2d",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "ct_img.GetSize(), ct_img.GetSpacing()",
-   "id": "df4219dff512004e",
    "outputs": [],
    "execution_count": null
   },
@@ -315,22 +251,6 @@
     "input_tensor = preprocess(ct_path)"
    ],
    "id": "317ab812475f826f",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "input_tensor.shape",
-   "id": "faf33212781a634",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "input_tensor.shape",
-   "id": "fa4bc4a05e7f194d",
    "outputs": [],
    "execution_count": null
   },
@@ -399,7 +319,12 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "from torch.nn import Conv3d",
+   "source": [
+    "from torch.nn import Conv3d\n",
+    "import numpy as np\n",
+    "import cc3d\n",
+    "from utils.plot import transparent_cmap"
+   ],
    "id": "61ba2d56334c740c",
    "outputs": [],
    "execution_count": null
@@ -417,21 +342,143 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Data processing\n",
+    "* Load CT, other channels, and seg\n",
+    "* Get all connected components in seg\n",
+    "* For every cc:\n",
+    "    * randomly sample max(1, 1% of all points) points in cc\n",
+    "    * get (64,128,128) mm patch around it + pad?\n",
+    "* crop the same patch in other channels (ctfm-seg, boxes, seg target)\n",
+    "* resize all to (C,24,128,128) pixels (c, z, x, y)"
+   ],
+   "id": "ea986eb8b2afc032"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "seg_path = train_labels / random.sample(ap_img, 1)[0].replace(\"_0000.nii.gz\", \".nii.gz\")\n",
+    "# constants\n",
+    "PATCH_SIZE_MM = (64, 128, 128)  # zyx\n",
+    "PATCH_DIMS = (24, 128, 128)  # zyx"
+   ],
+   "id": "abb3fff5f5d51b4c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
+    "def get_centroid(coords):\n",
+    "    return np.mean(coords, axis=0).round()\n",
+    "\n",
+    "\n",
+    "def sample_points(coords):\n",
+    "    centroid = get_centroid(coords)\n",
+    "    coords = np.vstack([c for c in coords if np.any(c != centroid)])\n",
+    "    n_points = 2\n",
+    "    point_indices = np.random.choice(len(coords), n_points, replace=False)\n",
+    "    sampled_points = np.vstack([coords[point_indices], centroid]).astype(int)\n",
+    "    return np.unique(sampled_points, axis=0)\n",
+    "\n",
+    "\n",
+    "def get_xyz_range(point, spacing, patch_size_mm):\n",
+    "    x_size = round(patch_size_mm[2] / spacing[0])\n",
+    "    y_size = round(patch_size_mm[1] / spacing[1])\n",
+    "    z_size = round(patch_size_mm[0] / spacing[2])\n",
+    "\n",
+    "    x_start = point[2] - x_size // 2\n",
+    "    x_end = x_start + x_size\n",
+    "    y_start = point[1] - y_size // 2\n",
+    "    y_end = y_start + y_size\n",
+    "    z_start = point[0] - z_size // 2\n",
+    "    z_end = z_start + z_size\n",
+    "    return (x_start, x_end), (y_start, y_end), (z_start, z_end)\n",
+    "\n",
+    "\n",
+    "def calculate_padding(array, x_range, y_range, z_range):\n",
+    "    # array is zyx\n",
+    "    pad_x = (max(-x_range[0], 0), max(x_range[1] - array.shape[2], 0))\n",
+    "    pad_y = (max(-y_range[0], 0), max(y_range[1] - array.shape[1], 0))\n",
+    "    pad_z = (max(-z_range[0], 0), max(z_range[1] - array.shape[0], 0))\n",
+    "    return pad_x, pad_y, pad_z\n",
+    "\n",
+    "\n",
+    "def resize_volume(volume, new_shape):\n",
+    "    tensor = torch.from_numpy(volume).unsqueeze(0).unsqueeze(0).float()\n",
+    "    resized_tensor = F.interpolate(tensor, size=new_shape, mode='trilinear')\n",
+    "    return resized_tensor.squeeze().numpy()\n",
+    "\n",
+    "\n",
+    "def get_patch(array, point, spacing, patch_dims=PATCH_DIMS, patch_size_mm=PATCH_SIZE_MM):\n",
+    "    # get ranges to crop\n",
+    "    x_range, y_range, z_range = get_xyz_range(point, spacing, patch_size_mm)\n",
+    "\n",
+    "    # pad array so it fits within the range\n",
+    "    pad_x, pad_y, pad_z = calculate_padding(array, x_range, y_range, z_range)\n",
+    "    array_padded = np.pad(array, (pad_z, pad_y, pad_x), mode='reflect')  # mode='constant', constant_values=pad_value\n",
+    "\n",
+    "    # adjust range after padding\n",
+    "    z_range = [z + pad_z[0] for z in z_range]\n",
+    "    y_range = [y + pad_y[0] for y in y_range]\n",
+    "    x_range = [x + pad_x[0] for x in x_range]\n",
+    "\n",
+    "    # crop and resize\n",
+    "    patch = array_padded[z_range[0]:z_range[1], y_range[0]:y_range[1], x_range[0]:x_range[1]]\n",
+    "    return resize_volume(patch, patch_dims)"
+   ],
+   "id": "7d44d2f417af4dce",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# select sample\n",
+    "import random\n",
+    "# f = random.sample(uls_img, 1)[0]\n",
+    "# f = \"AutoPET-Lymphoma-B_PETCT_0fa313309d_CT_0000.nii.gz\"\n",
+    "f = \"ULSDL3D_000441_02_01_187_lesion_01_0000.nii.gz\"\n",
+    "\n",
+    "# load CT and seg\n",
+    "ct_path = train_images / f\n",
+    "ct_img = sitk.ReadImage(ct_path)\n",
+    "ct_data = sitk.GetArrayFromImage(ct_img)\n",
+    "\n",
+    "seg_path = train_labels / f.replace(\"_0000.nii.gz\", \".nii.gz\")\n",
     "seg_img = sitk.ReadImage(seg_path)\n",
-    "seg_data = sitk.GetArrayFromImage(seg_img)"
+    "seg_data = sitk.GetArrayFromImage(seg_img)\n",
+    "spacing = seg_img.GetSpacing()\n",
+    "\n",
+    "# get connected components in seg\n",
+    "labels, n_components = cc3d.connected_components(seg_data, return_N=True)\n",
+    "\n",
+    "# sample points within cc\n",
+    "for c in range(1, n_components + 1):\n",
+    "    coords = np.argwhere(labels == c)\n",
+    "    points = sample_points(coords)\n",
+    "    for point in points:\n",
+    "        # crop volume around the point\n",
+    "        seg_patch = get_patch(seg_data, point, spacing)\n",
+    "        ct_patch = get_patch(ct_data, point, spacing)\n",
+    "        print(f\"{f[:10]} {c=} {point=}\")"
    ],
-   "id": "ae80da88438508b8",
+   "id": "cd22546babaaa5a0",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "plt.imshow(seg_data.any(axis=1))",
-   "id": "e4db1e0772a85fa",
+   "source": "",
+   "id": "93e225c903543973",
    "outputs": [],
    "execution_count": null
   },
@@ -439,29 +486,20 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "import numpy as np\n",
-    "import cc3d\n",
+    "# visualize slices\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(6, 2))\n",
+    "for i in range(3):\n",
+    "    axes[i].imshow(ct_patch.mean(axis=i))\n",
+    "    axes[i].imshow(seg_patch.mean(axis=i), cmap=transparent_cmap(\"r\"))\n",
     "\n",
-    "\n",
-    "# Label connected components (26-connected by default)\n",
-    "labels, num_components = cc3d.connected_components(seg_data, return_N=True)\n",
-    "\n",
-    "# Calculate centroids\n",
-    "centroids = []\n",
-    "for component_id in range(1, num_components + 1):  # Skip background (label 0)\n",
-    "    voxel_coords = np.argwhere(labels == component_id)\n",
-    "    centroid = np.mean(voxel_coords, axis=0)  # [z, y, x] order\n",
-    "    centroids.append(centroid)"
+    "for ct, seg in zip(ct_patch, seg_patch):\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(6, 3))\n",
+    "    axes[0].imshow(ct, cmap=\"gray\")\n",
+    "    axes[1].imshow(ct, cmap=\"gray\")\n",
+    "    axes[1].imshow(seg, cmap=transparent_cmap(\"r\"))\n",
+    "    plt.show()"
    ],
-   "id": "c697a7d8b64bb982",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "centroids",
-   "id": "e57d54e81e0eccd6",
+   "id": "4ec06bbf9d0736da",
    "outputs": [],
    "execution_count": null
   }
